[B]0.2.1:[/B]
- lokalizace cs,en
- hledání jsou ukládána, nastavitelný je jejich maximální počet
- přidáno zobrazení naposled přidaných filmů
[B]0.2.0:[/B]
 - přidány DIVX filmy, podporované zdroje: movshare,divxstage,stagevu
 - přidáno zobrazování krátkých info o filmech
[B]0.1.0:[/B]
Initial version