@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.kinotip.cz"
        name="kinotip.cz"
-       version="0.2.1"
+       version="0.3.0"
        provider-name="lzoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.0.3"/>
+    <import addon="script.module.stream.resolver" version="1.0.4"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
