@@ -27,23 +27,28 @@ __addon__      = xbmcaddon.Addon(id=__scriptid__)
 __language__   = __addon__.getLocalizedString
 
 sys.path.append( os.path.join ( __addon__.getAddonInfo('path'), 'resources','lib') )
-import filmy,divx
+import filmy,divx,serialy
 import util
 
 divx.__addon__ = __addon__
 divx.__language__ = __language__
 filmy.__addon__ = __addon__
 filmy.__language__ = __language__
+serialy.__addon__ = __addon__
+serialy.__language__ = __language__
 
 def server(params):
 	if params['server'] == 'filmy':
 		return filmy.handle(params)
 	if params['server'] == 'divx':
 		return divx.handle(params)
+	if params['server'] == 'serialy':
+		return serialy.handle(params)
 
 def root():
 	util.add_dir('Filmy',{'server':'filmy'})
 	util.add_dir('DivX Filmy',{'server':'divx'})
+	util.add_dir('Seriály',{'server':'serialy'})
 	xbmcplugin.endOfDirectory(int(sys.argv[1]))
 
 p = util.params()
