@@ -9,4 +9,5 @@
 	<string id="30006">Kategorie filmů</string>
 	<string id="30007">Filmy podle herců</string>
 	<string id="30008">Filmy podle roku</string>
+	<string id="30009">[B]Nejnovější epizody[/B]</string>
 </strings>
