@@ -9,4 +9,5 @@
 	<string id="30006">Categories</string>
 	<string id="30007">Movies by artist</string>
 	<string id="30008">Movies by year</string>
+	<string id="30009">[B]Latest episodes[/B]</string>
 </strings>
